Fix image stretching issue in bio pop-up boxes

--- a/src/styles/WhoWeAreProfiles.scss
+++ b/src/styles/WhoWeAreProfiles.scss
@@ -106,6 +106,8 @@
 
 .WhoWeAreProfiles__selectedProfileImage {
     filter: grayscale(100%);
+    width: 250px;
+    height: 300px;
     margin-right: 30px;
 }
 
